Fix Sizing on Mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -50,6 +50,7 @@ body {
 
 .codehilite {
   background: none !important;
+  overflow-x: auto;
 }
 
 .custom-wrapper {
